--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,13 @@ Django==5.0.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
+environs==10.3.0
 inflection==0.5.1
+marshmallow==3.20.2
 packaging==23.2
 pillow==10.2.0
 PyJWT==2.8.0
+python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 sqlparse==0.4.4
