--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
 environs==10.3.0
+gunicorn==21.2.0
 inflection==0.5.1
 marshmallow==3.20.2
 packaging==23.2
