update http to https

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
 asgiref==3.7.2
-Django==5.0.2
+cffi==1.16.0
+cryptography==42.0.5
+Django
 django-cors-headers==4.3.1
+django-extensions==3.2.3
 django-sslserver==0.22
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
@@ -8,13 +11,17 @@ drf-yasg==1.21.7
 environs==10.3.0
 gunicorn==21.2.0
 inflection==0.5.1
+MarkupSafe==2.1.5
 marshmallow==3.20.2
 packaging==23.2
 pillow==10.2.0
+pycparser==2.22
 PyJWT==2.8.0
+pyOpenSSL==24.1.0
 python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 sqlparse==0.4.4
 uritemplate==4.1.1
+Werkzeug==3.0.2
 whitenoise==6.6.0
